--- a/动态规划/打家劫舍.md
+++ b/动态规划/打家劫舍.md
@@ -2,7 +2,7 @@
 ## 2. 写出子问题的递归关系  
 ## 3. 确认计算顺序  
 ### 表达式：$f(k)=max${$f(k-1),H_{k-1}+f(k-2)$}  
-
+### 代码块：
 ```python
 class Solution(object):
     def rob(self, nums):
@@ -13,6 +13,6 @@ class Solution(object):
         cur=0
         mon=0
         for i in nums:
-            mon,cur=cur,max(cur,mon+i)
+            mon,cur=cur,max(cur,mon+i)#mon可以理解为到本元素为止i-1前面总共获得的最大点数
         return cur
 ```
