--- a/动态规划/不同路径.md
+++ b/动态规划/不同路径.md
@@ -21,6 +21,7 @@ class Solution(object):
 ```python
 class Solution:
     def uniquePaths(self, m: int, n: int) -> int:
+        #dp = [[1]*n] + [[1]+[0] * (n-1) for _ in range(m-1)]
         pre = [1] * n
         cur = [1] * n
         for i in range(1, m):
