--- a/力扣100题/合并两个有序数组.md
+++ b/力扣100题/合并两个有序数组.md
@@ -1,1 +1,25 @@
-### 1.思路我有：从nums1数组中的第一个与nums2中的第一个开始比较，如果nums1中的值小于nums2中的值，跟nums2下一个值比较，如果大于nums2中的值，与nums2中的值交换位置，如果一直小于，就等到遍历完nums2中所有值后，开始比较nums1下一个值，等到超过m个后，直接将nums2中的数放入nums1，一直到最后（反正写着写着一旦分散注意力，就蒙了）
+### 1.思路我有：从nums1数组中的第一个与nums2中的第一个开始比较，如果nums1中的值小于nums2中的值，跟nums2下一个值比较，如果大于nums2中的值，与nums2中的值交换位置，如果一直小于，就等到遍历完nums2中所有值后，开始比较nums1下一个值，等到超过m个后，直接将nums2中的数放入nums1，一直到最后（反正写着写着一旦分散注意力，就蒙了）  
+### 代码块：  
+```python
+class Solution(object):
+    def merge(self, nums1, m, nums2, n):
+        """
+        :type nums1: List[int]
+        :type m: int
+        :type nums2: List[int]
+        :type n: int
+        :rtype: None Do not return anything, modify nums1 in-place instead.
+        """
+        j=0
+        for i in range(m+n):
+            while i<=m-1 and j<=n-1:#在序列1的前半部分比较
+                if nums1[i]<=nums2[j]:
+                    j+=1
+                else:
+                    nums2[j],nums1[i]=nums1[i],nums2[j]
+                    nums2.sort()#对容器进行重新排序
+                    break
+            j=0
+            if m-1<i<=m+n-1:#在序列2的后半部分比较
+                nums1[i]=nums2[i-m]
+```
